# Practice-Programming-Languages

./: README.md
Lenguajes de Programacion/: CMakeLists.txt  main.cpp
Lenguajes de Programacion/DoubleLinkedLists/: DoubleLinkedList.cpp  DoubleLinkedList.h
Lenguajes de Programacion/Events/: Event.h  eventA.h  eventB.h  eventC.cpp  eventC.h
Lenguajes de Programacion/Scientist/: Scientist.h  Scientist1.h  Scientist2.h
